feat(nas-product-comparison-showcase): 更新项目名称和依赖
项目名称从 `@masx200/uuid-online-generator` 更改为 `@masx200/nas-product-comparison-showcase`，以反映新的项目内容。

更新了 `package.json` 文件中的项目名称和添加了新的依赖项，包括 `@types/node`, `@vitejs/plugin-react`, `typescript`, `lucide-react`, `react-dom`, 和 `react`。

在 `nas-product-comparison-showcase.html` 文件中，更新了样式表和脚本的路径，从 `/index.css` 和 `/index.tsx` 更改为 `/nas-product-comparison-showcase/index.css` 和 `/nas-product-comparison-showcase/index.tsx`，以确保正确加载资源。

在 `tsconfig.json` 文件中，添加了 `"strict": true` 选项，以启用更严格的类型检查和编译选项。

在 `vite.config.ts` 文件中，添加了 `react` 插件，以支持 React 组件的开发和构建。调整了导入顺序，确保代码整洁和一致性。更新了别名配置，添加了 `"@": path.resolve(__dirname, ".")`，以便更方便地引用项目中的文件。修改了 `enhanced.js` 脚本的加载方式，从普通脚本改为模块脚本，以支持模块化开发和更好的性能优化。

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@masx200/uuid-online-generator",
+  "name": "@masx200/nas-product-comparison-showcase",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
     "@tailwindcss/vite": "^4.1.16",
     "@types/prismjs": "^1.26.5",
     "@types/uuid": "^11.0.0",
@@ -19,6 +22,9 @@
     "vite-plugin-pwa": "^1.1.0"
   },
   "dependencies": {
+    "lucide-react": "^0.554.0",
+    "react-dom": "^19.2.0",
+    "react": "^19.2.0",
     "@masx200/vite-plugin-virtual-http-resolve": "^1.0.1",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^24.9.2",
@@ -35,7 +41,7 @@
   "main": "postcss.config.js",
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/masx200/json-processing-libraries-comparison"
+    "url": "https://gitlab.com/masx200/nas-product-comparison-showcase"
   },
   "keywords": [],
   "author": "",
