feat: 添加 React 类型定义
在 `package.json` 中添加了 `@types/react` 和 `@types/react-dom` 的依赖项，以确保 TypeScript 能够正确地为 React 和 ReactDOM 提供类型检查和代码补全功能。

在 `pnpm-lock.yaml` 中添加了 `@types/react` 和 `@types/react-dom` 的具体版本信息，并更新了相关依赖项的完整性和版本兼容性。

在 `tsconfig.json` 中更新了 `include` 配置，使其包含 `src/**/*` 和 `**/*.tsx`，以便 TypeScript 编译器能够编译项目中的所有 TypeScript 和 TSX 文件。

在 `tsconfig.json` 中的 `types` 配置中添加了 `react` 和 `react-dom`，以确保 TypeScript 能够识别和使用 React 和 ReactDOM 的类型定义。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "include": [
+    "src/**/*",
+    "**/*.tsx",
+  ],
   "compilerOptions": {
     "strict": true,
     "target": "ES2022",
@@ -12,7 +16,9 @@
     ],
     "skipLibCheck": true,
     "types": [
-      "node"
+      "node",
+      "react",
+      "react-dom"
     ],
     "moduleResolution": "bundler",
     "isolatedModules": true,
