--- a/package.json
+++ b/package.json
@@ -10,29 +10,31 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
     "@tailwindcss/vite": "^4.1.16",
+    "@types/node": "^22.14.0",
     "@types/prismjs": "^1.26.5",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@types/uuid": "^11.0.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "rollup-plugin-html-minifier": "^2.0.0",
+    "typescript": "~5.8.2",
     "vite": "^7.1.7",
     "vite-plugin-prismjs": "^0.0.11",
     "vite-plugin-pwa": "^1.1.0"
   },
   "dependencies": {
-    "lucide-react": "^0.554.0",
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
     "@masx200/vite-plugin-virtual-http-resolve": "^1.0.1",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^24.9.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "chart.js": "^4.5.1",
+    "lucide-react": "^0.554.0",
     "prettier": "^3.6.2",
     "prismjs": "^1.30.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.16",
     "undici": "^7.16.0",
     "uuid": "^13.0.0"
